<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_SnakePart" Id="{f27560ca-609f-4a32-beec-7d69b5938a89}">
    <Declaration><![CDATA[TYPE ST_SnakePart :
STRUCT
	stBodyCoordinate : ST_Coordinate;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>